--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
     android:weightSum="3">
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/thumbNail"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/placeholder" />
