--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -11,39 +11,49 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
+        android:padding="8dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            app:cardCornerRadius="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/photo_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:text="TextView" />
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/photo_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:scaleType="fitCenter"
                     app:srcCompat="@drawable/placeholder" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/photo_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:padding="0dp"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/photo_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:text="TextView" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
